fix(sort): nowrap

--- a/src/Routes/Demo/TodoList/Filter/style.less
+++ b/src/Routes/Demo/TodoList/Filter/style.less
@@ -7,5 +7,10 @@
 
   .label {
     margin-right: 8px;
+    white-space: nowrap;
+
+    &:after {
+      content: ':';
+    }
   }
 }
