--- a/src/Routes/Demo/TodoList/Sort/style.less
+++ b/src/Routes/Demo/TodoList/Sort/style.less
@@ -7,6 +7,11 @@
 
   .label {
     margin-right: 8px;
+    white-space: nowrap;
+
+    &:after {
+      content: ':';
+    }
   }
 
   .order-button {
